HSEARCH-4873 Stop testing Hibernate Search against JDK 19